<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xyCopter</string>
    <string name="app_desc">Remote control App for xyControl based Quadrocopters, communicating with an BTM-222 via Bluetooth.\nSee http://www.xythobuz.org for more Informations.\nSee https://github.com/xythobuz/xyControl for the Source Code of this App.</string>

    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_parameters">PID Parameters</string>
    <string name="menu_testgraph">Test Graph</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_firmware">Flash</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
	<string name="pid_title">PID Parameters</string>
	<string name="dropbox_title">Dropbox Error</string>
    
	<string name="general_error">Error</string>
	
	<string name="hex_title">HEX Error</string>
	<string name="hex_invalid">HEX File invalid!</string>
	<string name="hex_read">HEX read error!</string>
	<string name="hex_select">Select HEX File</string>
	
    <string name="intro_enabling">Enabling Bluetooth&#8230;</string>
    <string name="intro_wait">Ready!</string>
	<string name="intro_connect">Connecting&#8230;</string>
	<string name="intro_ready">Connected to </string>
	<string name="intro_disconnect">\nDisconnected!</string>

	<string name="firstText">Roll: </string>
	<string name="secondText">Pitch: </string>
	<string name="thirdText">Yaw: </string>
	<string name="fourthText">Voltage: </string>
	<string name="fifthText">Motors: </string>
	<string name="sixthText">PID: </string>
	<string name="seventhText">Params: </string>
	<string name="eigthText">Busy: </string>
	
    <string name="bluetooth_error_title">Bluetooth Error</string>
    <string name="bluetooth_no_adapter">No Bluetooth Adapter found!</string>
    <string name="bluetooth_turned_off">Couldn\'t turn on Bluetooth!</string>
    <string name="bluetooth_select">Select Device</string>
    <string name="bluetooth_no_devices">No paired devices!</string>
    <string name="bluetooth_no_connect">Couldn\'t connect!</string>
    
    <string name="bLeft">Left</string>
    <string name="bRight">Right</string>
    <string name="bUp">Up</string>
    <string name="bDown">Down</string>
    <string name="bForw">Forward</string>
    <string name="bBack">Back</string>
    <string name="bTog">Motor</string>
    <string name="bAng">PID</string>
    <string name="bZero">Zero</string>
    <string name="bReset">Reset</string>
    <string name="bSilent">Silent</string>

</resources>