<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/connect"
        android:showAsAction="ifRoom"
        android:title="@string/menu_connect"/>
    <item
        android:id="@+id/disconnect"
        android:showAsAction="ifRoom"
        android:title="@string/menu_disconnect"/>
    <item
        android:id="@+id/parameters"
        android:showAsAction="ifRoom"
        android:title="@string/menu_parameters"/>
    <item
        android:id="@+id/firmware"
        android:showAsAction="ifRoom"
        android:title="@string/menu_firmware"/>
    <item
        android:id="@+id/clear"
        android:showAsAction="ifRoom"
        android:title="@string/menu_clear"/>
    <item
        android:id="@+id/testgraph"
        android:showAsAction="ifRoom"
        android:title="@string/menu_testgraph"/>

</menu>